# lxwyerup5

./: ADMIN_APPROVAL_GUIDE.md  DUMMY_CREDENTIALS.md  DUMMY_DATA_CREDENTIALS.md  approve_application.py  backend_test.py  check_applications.py  check_backend_keys.py  check_frontend_generation.js  deploy.sh  design_guidelines.json  firm_client_application_test.py  package.json  quick_auth_test.py  restart_backend.sh  restrict_site.py  run_free_training.sh  test_db.py  test_login.py  test_result.md  vercel.json  verify_admin_api.py
.vercel_backend_backup/: project.json
.vercel_backend_backup/cache/main_py/: .env.example  .pyre_configuration  main.py  pyproject.toml  test_submission.sh
.vercel_backend_backup/cache/main_py/middleware/: __init__.py  ip_guard.py  security.py
.vercel_backend_backup/cache/main_py/models/: __init__.py  booking.py  case.py  chat.py  document.py  event.py  firm_client.py  firm_lawyer.py  lawfirm_application.py  lawyer_application.py  message.py  notification.py  sos.py  waitlist.py
.vercel_backend_backup/cache/main_py/routes/: __init__.py  admin.py  auth.py  auth_google.py  billing.py  bookings.py  cases.py  chat.py  dashboard.py  documents.py  events.py  firm_clients.py  firm_lawyers.py  lawfirms.py  lawyers.py  legal_chat.py  messages.py  monitor.py  network.py  notifications.py  otp.py  smart_match.py  sos.py  waitlist.py
.vercel_backend_backup/cache/main_py/scripts/: restore_unique_ids.py  sync_app_ids.py
.vercel_backend_backup/cache/main_py/services/: __init__.py  auth.py  chat_service.py  scheduler.py
backend/: .vercelignore  (+16 more)
(+133 files in other folders)
